@@ -9,7 +9,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @Service
@@ -23,7 +22,7 @@ public class EquipoService {
     public void actualizarDatosEquipos() {
         // Obtén la lista de todos los equipos y conviértela en una List
         List<Equipo> equipos = StreamSupport.stream(equipoRepository.findAll().spliterator(), false)
-                .collect(Collectors.toList());
+                .toList();
 
         for (Equipo equipo : equipos) {
             // Realiza la actualización para cada equipo
@@ -31,16 +30,58 @@ public class EquipoService {
         }
     }
 
+
     public void actualizarDatosEquipo(Equipo equipo) {
+        // Busca todas las partidas en las que el equipo es equipo local o visitante
         List<Partida> partidasDelEquipo = partidaRepository.findByEquipoLocalOrEquipoVisitante(equipo, equipo);
         int oroAcumulado = 0;
+        int minionsAcumulados = 0;
+        int baronesAcumulados = 0;
+        int torresAcumuladas = 0;
+        int dragonesAcumulados = 0;
+        int tiempoDeJuegoAcumulado = 0;
+        int victoriasAcumuladas = 0;
+        int derrotasAcumuladas = 0;
 
         for (Partida partida : partidasDelEquipo) {
-            oroAcumulado += partida.getOroLocal(); // Suma el oro ganado en partidas locales
-            oroAcumulado += partida.getOroVisitante(); // Suma el oro ganado en partidas visitantes
+            if (partida.getEquipoLocal().equals(equipo)) {
+                oroAcumulado += partida.getOroLocal();
+                minionsAcumulados += partida.getMinionsLocal();
+                baronesAcumulados += partida.getBaronesLocal();
+                torresAcumuladas += partida.getTorresLocal();
+                dragonesAcumulados += partida.getDragonesLocal();
+                tiempoDeJuegoAcumulado += partida.getDuracion();
+
+                if (equipo.getNombre().equals(partida.getEquipoGanador())) {
+                    victoriasAcumuladas++;
+                } else {
+                    derrotasAcumuladas++;
+                }
+            } else {
+                oroAcumulado += partida.getOroVisitante();
+                minionsAcumulados += partida.getMinionsVisitante();
+                baronesAcumulados += partida.getBaronesVisitante();
+                torresAcumuladas += partida.getTorresVisitante();
+                dragonesAcumulados += partida.getDragonesVisitante();
+                tiempoDeJuegoAcumulado += partida.getDuracion();
+
+                if (equipo.getNombre().equals(partida.getEquipoGanador())) {
+                    victoriasAcumuladas++;
+                } else {
+                    derrotasAcumuladas++;
+                }
+            }
         }
 
-        equipo.setOro(oroAcumulado); // Actualiza el campo "oro" del equipo con el valor acumulado
+        equipo.setOro(oroAcumulado);
+        equipo.setMinions(minionsAcumulados);
+        equipo.setBarones(baronesAcumulados);
+        equipo.setTorres(torresAcumuladas);
+        equipo.setDragones(dragonesAcumulados);
+        equipo.setTiempoDeJuego(tiempoDeJuegoAcumulado);
+        equipo.setVictorias(victoriasAcumuladas);
+        equipo.setDerrotas(derrotasAcumuladas);
+
         equipoRepository.save(equipo);
     }
 }
